[package]
name = "ashpd-mre"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ashpd = { version = "0.6.7", default-features = false, features = ["tokio"] }
ashpd = { git = "https://github.com/feschber/ashpd", branch="fix-once-cell-panic", default-features = false, features = ["tokio"] }
tokio = { version = "1.35.1", features = ["io-util", "macros"] }
