[package]
name = "ashpd-mre"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
# ashpd = { version = "0.6.7", default-features = false, features = ["tokio"] }
ashpd = { version = "0.8", default-features = false, features = ["tokio"] }
futures = "0.3.30"
futures-core = "0.3.30"
log = "0.4.21"
once_cell = "1.19.0"
reis = { git = "https://github.com/ids1024/reis", features = [ "tokio" ] }
tokio = { version = "1.35.1", features = ["io-util", "macros"] }
